[gd_scene load_steps=3 format=2]

[ext_resource path="res://cenas/Tela2.gd" type="Script" id=1]
[ext_resource path="res://cenas/Global.tres" type="Resource" id=2]

[node name="Tela2" type="Node2D"]
script = ExtResource( 1 )
g = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 599.0
color = Color( 0.188235, 0.0117647, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 419.0
margin_top = 364.0
margin_right = 614.0
margin_bottom = 466.0
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 391.3
margin_top = 105.506
margin_right = 634.3
margin_bottom = 153.506
text = "Tela 2
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlayer1" type="Button" parent="."]
margin_left = 370.417
margin_top = 251.984
margin_right = 429.417
margin_bottom = 271.984
text = "Player1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlayer2" type="Button" parent="."]
margin_left = 592.163
margin_top = 254.504
margin_right = 651.163
margin_bottom = 274.504
text = "Player2"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonPlayer1" to="." method="_on_ButtonPlayer1_pressed"]
[connection signal="pressed" from="ButtonPlayer2" to="." method="_on_ButtonPlayer2_pressed"]
